# real_time_bidder_service

./: README.md  app.py  config.py  requirements.txt  setup.cfg
bidder_application/: __init__.py  common.py  db_api.py  models.py
bidder_application/bidder/: BidderService.py  bidder.py
bidder_application/campaign/: campaign.py
tests/: test_bidder_service.py
