[metadata]
name = bidder
version = 1.0.0
maintainer = EPapadopoulou
maintainer_email = EPapadopoulou@elisys.gr
description = Project Agora

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests